# microlang

./: .gitignore  CMakeLists.txt  README.md  compile_ll.sh
src/: AST.cpp  AST.h  AstVisitor.cpp  AstVisitor.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Log.cpp  Log.h  Result.h  Utils.cpp  Utils.h  main.cpp
src/back/: AstVisitor.cpp  CMakeLists.txt
src/back/include/back/: AstVisitor.h
src/common/: CMakeLists.txt  Log.cpp  Log.h  Utils.cpp
src/common/include/common/: Result.h
src/front/: AST.cpp  AST.h  AstBuilder.cpp  CMakeLists.txt  Lexer.cpp  Lexer.h
src/front/include/front/: AST.h  AstBuilder.h  Lexer.h
test/: CMakeLists.txt  CompilerTest.sh  compile_ll.sh  text.txt
test/front/: ASTTests.cpp
